update json